Einzelne Termineingabe. Verwaltung vorbereitet

--- a/src/App_dev.css
+++ b/src/App_dev.css
@@ -8,7 +8,7 @@ header {
   background-color: #282c34;
   min-height: 5vh;
   width: 100vw;
-  display: none;/*flex*/
+  display: flex;/*flex*/
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -16,14 +16,7 @@ header {
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 5vh;
-  width: 100vw;
-  display: none;/*flex*/
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;/*flex*/
 }
 
 .App-header img {
