--- a/src/components/memberadministration/MemberAdministration.css
+++ b/src/components/memberadministration/MemberAdministration.css
@@ -1,6 +1,6 @@
 .Memberadministration-header {
     background-color: #282c34;
-    min-height: 5vh;
+    min-height: 30px;
     width: 100vw;
     display: flex;
     align-items: center;
