--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-height: 100vh;
 }
 
 header {
   background-color: #282c34;
-  min-height: 5vh;
+  min-height: 30px;
   width: 100vw;
   display: flex;/*flex*/
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: relative;
 }
 
 .App-header {
   position: relative;
   background-color: #282c34;
-  min-height: 5vh;
+  min-height: 30px;
   width: 100vw;
   display: flex;/*flex*/
   align-items: center;
@@ -37,6 +39,8 @@ header {
 }
 
 nav {
+  display: flex;
   position: absolute;
   left: 1px;
+  align-content: center;
 }
